Assessment5/force-app/main/default/objects/Loan_Account__c/fields/Default_Risk__c.field-meta.xml
<CustomField>
    <fullName>Default_Risk__c</fullName>
    <label>Default Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>