Assessment5/force-app/main/default/objects/Loan_Account__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <label>Loan Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>