Assessment5/force-app/main/default/objects/Loan_Account__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Loan</fullName>
                <default>true</default>
                <label>Personal Loan</label>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Vehicle Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Education Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>